--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ torch = {version = "==2.3.1", index = "downloadpytorch"}
 pytorch-lightning = "==2.3.0"
 notebook = "*"
 pandas = "==2.2.2"
+transformers = "*"
 
 [dev-packages]
 
