--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ pytorch-lightning = "==2.3.0"
 notebook = "*"
 pandas = "==2.2.2"
 transformers = "*"
+mlflow = "==2.14.3"
+torchmetrics = "==1.4.0"
 
 [dev-packages]
 
